--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<button class="btn">Set Grid</button>
 		<div id="container">
 
 		</div>
-		
+
 	</body>
 </html>
