added container for button for styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<button class="btn">Set Grid</button>
+		<div id="button-wrapper">
+			<button class="btn">Set Grid</button>
+		</div>
+		
 		<div id="container">
 
 		</div>
