--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<h1>Etch-A-Sketch</h1>
 		<div id="button-wrapper">
 			<button class="btn">Set Grid</button>
 		</div>
