revised code for grid

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script src="script.js" defer></script>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<h1>Etch-A-Sketch</h1>
-		<div id="button-wrapper">
-			<button class="btn">Set Grid</button>
-		</div>
-		
-		<div id="container">
+    <head>
+        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 
-		</div>
+        <div id="header">
+            <h1>Etch A Sketch</h1>
+            <button class="btn1">New Grid</button>
+            <button class="btn2">Clear Grid</button>
 
-	</body>
+            <div id="container"></div>
+        </div>
+
+        
+    </body>
 </html>
